--- a/source/sass/scaffolding.scss
+++ b/source/sass/scaffolding.scss
@@ -1,7 +1,11 @@
 body {
   min-width: 320px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 main {
   overflow: hidden;
+  flex: 1 0 auto;
 }
