--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -4,6 +4,7 @@
 @import "mixins.scss";
 @import "scaffolding.scss";
 @import "blocks/visually-hidden.scss";
+@import "blocks/top-background.scss";
 @import "blocks/page-header.scss";
 @import "blocks/contacts.scss";
 @import "blocks/button.scss";
