--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -13,7 +13,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  width: 740px;
+  max-width: 740px;
 }
 
 .promo__title {
@@ -72,9 +72,12 @@
     width: auto;
   }
 
+  .promo__wrapper {
+    max-width: 440px;
+  }
+
   .promo__title {
     padding-left: 0;
-    max-width: 330px;
 
     @include roboto-bold(60px, 70px);
   }
@@ -82,7 +85,6 @@
   .promo__text {
     margin-bottom: 56px;
     padding-left: 51px;
-    max-width: 400px;
 
     @include ptmono(18px, 156.8%);
 
@@ -123,13 +125,11 @@
   .promo__title {
     margin-left: 0;
     margin-bottom: 27px;
-    max-width: 230px;
 
     @include roboto-bold(40px, 47px);
   }
 
   .promo__text {
-    max-width: 280px;
     margin-bottom: 43px;
     margin-left: 0;
     padding-left: 49px;
