--- a/source/sass/scaffolding.scss
+++ b/source/sass/scaffolding.scss
@@ -1,11 +1,15 @@
 body {
+  box-sizing: border-box;
+  min-height: 100vh;
   min-width: 320px;
   height: 100%;
   display: flex;
   flex-direction: column;
+
 }
 
 main {
   overflow: hidden;
   flex: 1 0 auto;
+  box-sizing: border-box;
 }
