--- a/source/sass/blocks/popup.scss
+++ b/source/sass/blocks/popup.scss
@@ -1,10 +1,10 @@
 .popup {
   position: absolute;
   z-index: 2;
-  width: 100%;
-  height: 100%;
   top: 0;
+  bottom: 0;
   left: 0;
+  right: 0;
   background-color: rgba(black, 0.5);
 }
 
