--- a/source/sass/blocks/visually-hidden.scss
+++ b/source/sass/blocks/visually-hidden.scss
@@ -1,9 +1,16 @@
 .visually-hidden {
   position: absolute;
-  clip: rect(1px, 1px, 1px, 1px);
+  visibility: hidden;
+  pointer-events: none;
+  clip: rect(0 0 0 0);
+  clip-path: inset(100%);
+  width: 1px;
+  height: 1px;
+  margin: -1px;
   padding: 0;
   border: 0;
-  height: 1px;
-  width: 1px;
+  text-indent: -9999px;
+  white-space: nowrap;
   overflow: hidden;
+  user-select: none;
 }
