--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -4,7 +4,7 @@
   height: 316px;
 
   &--nojs {
-    .page-footer__toggle {
+    .page-footer__toggle::after {
       display: none;
     }
 
@@ -33,7 +33,7 @@
   margin-bottom: 50px;
 }
 
-.page-footer__toggle {
+.page-footer__toggle::after {
   display: none;
 }
 
@@ -233,11 +233,11 @@
     border-bottom: 1px solid rgba($grey, 0.2);
     position: relative;
 
-    padding: 30px 25px 23px;
+    padding: 30px 15px 23px;
 
     h3 {
-      margin: -30px -25px -23px;
-      padding: 30px 25px 23px;
+      margin: -30px -15px -23px;
+      padding: 30px 15px 23px;
     }
   }
 
@@ -251,41 +251,24 @@
   }
 
   .page-footer__toggle {
-    display: block;
-    position: absolute;
-    background: transparent;
-    top: 29px;
-    right: 16px;
-    width: 16px;
-    height: 16px;
+    position: relative;
 
-    content: "";
-    font-size: 0;
-    border: none;
-
-    &::before {
+    &::after {
+      display: block;
       position: absolute;
-      background-color: $light-grey;
-      top: 50%;
-      left: 0;
-      width: 100%;
-      height: 1px;
+      top: calc(50% - 8px);
+      right: 16px;
+      width: 16px;
+      height: 16px;
 
       content: "";
+      background: url("../img/minus.svg") center no-repeat;
     }
   }
 
   .page-footer__toggle--plus {
     &::after {
-      position: absolute;
-      background-color: $light-grey;
-      transform: rotate(90deg);
-      top: 50%;
-      left: 0;
-      width: 100%;
-      height: 1px;
-
-      content: "";
+      background: url("../img/plus.svg") center no-repeat;
     }
   }
 }
